--- a/frontend/src/components/HomePage.css
+++ b/frontend/src/components/HomePage.css
@@ -1,4 +1,3 @@
-
 body {
   overflow-x: hidden;
   background: #fff;
@@ -31,7 +30,7 @@ body {
   justify-content: center;
   gap: 16px;
   margin-top: 20px;
-  margin-bottom: 25px; 
+  margin-bottom: 25px;
 }
 
 .action-btn {
@@ -150,7 +149,7 @@ body {
 }
 
 .search-btn {
-  background: #ff5a5f;
+  background-color: transparent;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -341,7 +340,7 @@ body {
   align-items: center;
   justify-content: center;
   margin: 0 auto;
- 
+
 }
 
 
@@ -350,7 +349,7 @@ body {
   font-size: 1.8rem;
   color: #ff4a57;
   font-weight: 600;
-  
+
 }
 
 
@@ -387,7 +386,7 @@ body {
 .assist-header {
   width: 100vw;
   background-color: #f6f6f6;
-  overflow-x: hidden; 
+  overflow-x: hidden;
 }
 
 /* Centered heading with lines and circles */
@@ -455,11 +454,13 @@ body {
     max-width: 250px;
   }
 }
+
 .assist-inner {
-  transform: translateX(150px); 
+  transform: translateX(150px);
 }
+
 .assist-gap {
-  transform: translateX(150px); 
+  transform: translateX(150px);
 }
 
 @media (max-width: 768px) {
@@ -679,14 +680,14 @@ body {
   background-color: #f6f6f6;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  padding: 60px 0; 
+  padding: 60px 0;
   display: flex;
   align-items: center;
 }
 
 .cta-box {
   padding: 20px;
-  min-height: 160px; 
+  min-height: 160px;
 }
 
 .cta-box h6 {
@@ -708,7 +709,7 @@ body {
 
 .cta-divider {
   width: 2px;
-  height: 150px; 
+  height: 150px;
   color: #2d2d2d;
   background-color: #8c8c8c;
   border-radius: 2px;
@@ -794,7 +795,7 @@ body {
   width: 38px;
   height: 38px;
   border-radius: 50%;
-  background-color:  #c7d9e7;
+  background-color: #c7d9e7;
   display: flex;
   align-items: center;
   justify-content: center;
